--- a/Project/index.html
+++ b/Project/index.html
@@ -3,7 +3,7 @@
 <head>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <link href='index.css' rel='stylesheet' type='text/css'>
-<link href='onLoad.js' rel='stylesheet' type='text/js'
+<link href='onLoad.js' rel='stylesheet' type='text/javascript'
 
 <title>MS Projects</title>
 </head>
