--- a/Project/wipprojects.html
+++ b/Project/wipprojects.html
@@ -14,9 +14,9 @@
 
 	<center><b><ul id="tabs">
 
-		<li><a href="file:///C:/Users/3084828/Documents/HTML/Project/index.html">Home</a></li>
+		<li><a href="index.html">Home</a></li>
 		<li><a>WIP Projects</a></li>
-		<li><a href="file:///C:/Users/3084828/Documents/HTML/Project/finishedprojects.html">Completed Projects</a></li>
+		<li><a href="finishedprojects.html">Completed Projects</a></li>
 
 	</ul></b></center>
 
