Links to pages work now

--- a/Project/index.html
+++ b/Project/index.html
@@ -16,8 +16,8 @@
 	<center><b><ul id="tabs">
 
 		<li><a>Home</a></li>
-		<li><a href="file:///C:/Users/3084828/Documents/HTML/Project/wipprojects.html">WIP Projects</a></li>
-		<li><a href="file:///C:/Users/3084828/Documents/HTML/Project/finishedprojects.html">Completed Projects</a></li>
+		<li><a href="wipprojects.html">WIP Projects</a></li>
+		<li><a href="finishedprojects.html">Completed Projects</a></li>
 
 	</ul></b></center>
 
